--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -8,13 +8,14 @@
     <LinearLayout
         android:id="@+id/act2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:orientation="vertical"
         >
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,9 +25,10 @@
             android:textStyle="bold"
             android:textAlignment="center"
             android:layout_marginLeft="120dp"
-            android:layout_marginBottom="30dp"/>
+            android:layout_marginBottom="10dp"/>
         <TextView
             android:id="@+id/name"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
@@ -38,9 +40,10 @@
             android:textColor="#000000"
             android:textAlignment="center"
             android:layout_marginLeft="120dp"
-            android:layout_marginBottom="30dp"/>
+            android:layout_marginBottom="10dp"/>
         <TextView
             android:id="@+id/intro"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
@@ -52,9 +55,10 @@
             android:textColor="#000000"
             android:textAlignment="center"
             android:layout_marginLeft="120dp"
-            android:layout_marginBottom="30dp"/>
-        <EditText
+            android:layout_marginBottom="10dp"/>
+        <TextView
             android:id="@+id/rules"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
@@ -66,9 +70,25 @@
             android:textColor="#000000"
             android:textAlignment="center"
             android:layout_marginLeft="100dp"
-            android:layout_marginBottom="30dp"/>
+            android:layout_marginBottom="10dp"/>
         <TextView
             android:id="@+id/struct"
+            android:textSize="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="VENUE"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:textAlignment="center"
+            android:layout_marginLeft="110dp"
+            android:layout_marginBottom="10dp"/>
+        <TextView
+            android:id="@+id/venue"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
@@ -80,12 +100,27 @@
             android:textColor="#000000"
             android:textAlignment="center"
             android:layout_marginLeft="110dp"
-            android:layout_marginBottom="30dp"/>
+            android:layout_marginBottom="10dp"/>
         <TextView
             android:id="@+id/contact"
+            android:textSize="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <Button
+            android:id="@+id/register"
+            android:onClick="register"
+            android:text="REGISTER"
+            android:layout_width="120dp"
+            android:layout_height="48dp"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="20dp"
+            />
+        <WebView
+            android:id="@+id/webview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+        </WebView>
     </LinearLayout>
 
 </ScrollView>
