--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,6 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
+    android:background="@drawable/mback"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_main"
     tools:context="com.example.jayesh123.abhiwyakti.MainActivity">
@@ -22,13 +23,10 @@
         android:layout_marginLeft="25dp"
      ></android.support.v4.view.ViewPager>
 
-    <TextView
+    <ImageView
         android:layout_width="300dp"
         android:layout_height="65dp"
-        android:text="   Abhivyakti"
-        android:fontFamily="sans-serif"
-        android:textSize="50dp"
-        android:textColor="#000000"
+        android:src="@drawable/pict"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="9dp"/>
     <TextView
